codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_redo.snap
---
source: tui/src/keymap_setup.rs
expression: redo_row
---
› Vim normal     Redo                             ctrl-r
